--- a/resources/style.css
+++ b/resources/style.css
@@ -25,13 +25,20 @@ button {
 }
 
 button:hover {
-	background-color: #005300;
+	background-color: hsl(305, 31%, 23%);
 	transform: scale(1.1);
 	box-shadow: 0 0 20px 1px;
 }
 
 button:active {
     transform: scale(0.89);
+}
+
+.header h3 {
+	margin-bottom: 6px;
+}
+.header p {
+	margin: 0 0 1rem 0;
 }
 
 /* Game area */
@@ -110,7 +117,7 @@ footer {
 /* Disappear and animate */
 
 .disappear {
-	display: none;
+	display: none !important;
 }
 
 #end-alert {
@@ -124,6 +131,7 @@ footer {
   font-size: 50px;
   margin-bottom: 25px;
 }
+
 #retry-btn {
   display: inline-block;
   padding: 0.8em 1.4em;
@@ -135,10 +143,9 @@ footer {
   box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17);
   position: relative;
   margin-top: 25px;
-  opacity: 0;
+  opacity: 100%;
 }
 #retry-btn:hover {
   cursor: pointer;
-  filter: brightness(1.1);
   transform: scale(1.05);
 }
