--- a/resources/style.css
+++ b/resources/style.css
@@ -149,3 +149,27 @@ footer {
   cursor: pointer;
   transform: scale(1.05);
 }
+
+/* MOBILE VERSION */
+
+@media only screen and (max-width: 480px) {
+
+	.game {
+		display: flex;
+		flex-flow: column;
+		margin: 0;
+		margin: auto;
+		justify-content: center;
+		align-items: center;
+		gap: 0.25rem;
+	}
+	.btn img{
+		max-width: 100px;
+	}
+
+	.result.body {
+		justify-content: center;
+		padding: 0.35rem;
+	}
+
+}
