--- a/resources/style.css
+++ b/resources/style.css
@@ -114,6 +114,12 @@ footer {
 
 /* Disappear and animate */
 
+.cpu {
+	transform: scale(1.1);
+	background-color: hsla(217, 72%, 41%, 0.955);
+}
+
+
 .playing {
 	transform: scale(1.1);
 	border-color: green;
