--- a/resources/style.css
+++ b/resources/style.css
@@ -7,6 +7,7 @@ html {
 	font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+
 .header {
 	text-align: center;
 	font-size: large;
@@ -82,6 +83,7 @@ footer {
 	width: 100%;
 	text-align: center;
 	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	padding-bottom: 1rem;
 }
 
 
@@ -89,6 +91,7 @@ footer {
 #anchor {
 	text-decoration: none;
 	color: white;
+	padding: 0px 2px;
 }
 
 
